Made reset unpause the clock if paused.  Both tabs.
Added and incorporated new images for light bulbs.
# 0.00.41 (72581) Mar 21, 2013
3/21/13 Version with fix for thermometer bug
# 0.00.40 (72577) Mar 21, 2013
3/21/13 Deploy to dev for interviews.
Changed the way that thermometers work so that they appear to jump a little when the user clicks on them in the tool box.
Increased speed of free energy chunks on the first tab.
# 0.00.39 (72574) Mar 21, 2013
3/21/13 Publish to dev for review and interviews.
Fixed an issue where clicking on the thermometers in the tool box could make them appear to vanish.
Made the light bulbs occasionally radiate a thermal energy chunk.  Incandescent bulb radiates more of them than fluorescent.
Changed the algorithm for spacing out energy chunks on the solar panel so that they won't build up on the panel.
Made it so that energy chunks that are being pulled out of the air by cooling won't turn around if they are close to the burner.
Fixed an issue where the quantity of energy chunks exchanged with the air was too high when the burner was heating or cooling with nothing on it.
Fixed an issue where the beaker fluid level appeared to jump when first shown because once clock cycle was needed to initialize fluid appearance.
Fixed an issue where the sun's rays were briefly visible when the 2nd tab was first shown.
# 0.00.38 (72559) Mar 19, 2013
3/19/13 Deploy  to dev for interviews
Fixed issue where cloudiness of sun energy source was not reset when tab was reset.
Added feature where energy chunks are propagated through the energy systems if visibility is turned on after energy flow has started.
# 0.00.37 (72532) Mar 18, 2013
3/18/13 Deploy to dev for use in interviews.
Fixed an issues where the electrical energy chunks could get jammed up or even stuck on the solar panel after a reset of the tab.
Made the beaker's heating and cooling rate dependent upon the presence of thermal energy chunks when in "energy chunk visible" mode.