@@ -1,3 +1,4 @@
+Put carousels on 2nd tab on separate clock so that they still operate when tab is paused.
 Made reset unpause the clock if paused.  Both tabs.
 Added and incorporated new images for light bulbs.
 # 0.00.41 (72581) Mar 21, 2013
